Closed Bug 243019 Opened 22 years ago Closed 22 years ago

[FIX]"Wrong parent style context" warnings in profile wizard

Categories

(Core :: CSS Parsing and Computation, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: Biesinger, Assigned: bzbarsky)

Details

Attachments

(1 file)

This is a gtk2+xft build from current cvs trunk (seamonkey). When creating a new profile, I Get these warnings: frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null frame: DocElementBox(wizard)(-1) (0x8424f18) style: 0x8424e98 {} Has parent context: style: 0x8424cb8 :-moz-canvas {} Should be null I believe I got one of those per page of the wizard, but I'm not sure about that. my mozconfig: ac_add_options --enable-crypto ac_add_options --enable-default-toolkit=gtk2 ac_add_options --enable-xft ac_add_options --disable-optimize ac_add_options --enable-debug
actually, just clicking "create profile" lead to 3 or 4 of those warnings
Attached patch PatchSplinter Review
The patch in bug 236921 missed the case when the root has an XBL binding with scoped sheets attached to it.
Assignee: dbaron → bzbarsky
Status: UNCONFIRMED → ASSIGNED
Attachment #147993 - Flags: superreview?(roc)
Attachment #147993 - Flags: review?(roc)
Priority: -- → P3
Summary: "Wrong parent style context" warnings in profile wizard → [FIX]"Wrong parent style context" warnings in profile wizard
Target Milestone: --- → mozilla1.8alpha
would this patch also fix a similar warning, just for dialog instead of wizard? (happened when clicking "delete profile", I think)
It should, yes.
(In reply to comment #4) > It should, yes. and it indeed does.
Attachment #147993 - Flags: superreview?(roc)
Attachment #147993 - Flags: superreview+
Attachment #147993 - Flags: review?(roc)
Attachment #147993 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: