Make sure to use the right parent style context (null) when reresolving style for a root node with an XBL binding that includes scoped stylesheets.  Bug 243019, r+sr=roc